<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="TenPercent_Label">10%</string>
    <string name="FifteenPercent_Label">15%</string>
    <string name="TwentyPercent_Label">20%</string>
    <string name="nothing_label">Nothing Yet</string>
    <string name="enter_prompt">Enter the total amount of the transaction</string>

</resources>
